--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,39 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+
+**/.localstack-aws/*
+
+# .tfstate files
+localstack-aws/*.tfstate
+localstack-aws/*.tfstate.*
+
+# Crash log files
+localstack-aws/crash.log
+localstack-aws/crash.*.log
+
+# Exclude all .tfvars files, which are likely to contain sensitive data, such as
+# password, private keys, and other secrets. These should not be part of version 
+# control as they are data points which are potentially sensitive and subject 
+# to change depending on the environment.
+# localstack-aws/*.tfvars
+# localstack-aws/*.tfvars.json
+
+# Ignore override files as they are usually used to override resources locally and so
+# are not checked in
+localstack-aws/override.tf
+localstack-aws/override.tf.json
+localstack-aws/*_override.tf
+localstack-aws/*_override.tf.json
+
+# Include override files you do wish to add to version control using negated pattern
+# !example_override.tf
+
+# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
+# example: *tfplan*
+
+# Ignore CLI configuration files
+localstack-aws/.terraformrc
+localstack-aws/terraform.rc
+localstack-aws/hashicorp
